--- a/src/css/SearchForm.scss
+++ b/src/css/SearchForm.scss
@@ -14,6 +14,20 @@ form {
     background-color: white;
     border: 1px solid #80808078;
     border-radius: 5px;
+        .message {
+            margin-top: 1rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: white;
+        }
+        .disable-form {  
+            position: absolute;
+            inset: 0;
+            background: rgba(255,255,255,0.5);
+            cursor: not-allowed;
+            z-index: 5;
+        }
         label {
             font-weight: 600;
             margin-bottom: 1rem;
