Завдання 4. сторінка туру: Created logic to to get full tour info with hotelId and priceId. Reused and modified CardsContainer to show full tour info.

--- a/src/css/SearchForm.scss
+++ b/src/css/SearchForm.scss
@@ -5,7 +5,12 @@ body {
     background-color: #8080804f;
 }
 
+.extended-info {
+    display: none;
+}
+
 form {
+    width: fit-content;
     position: relative;
     display: flex;
     flex-direction: column;
