Завдання 5. Зміна параметрів під час пошуку: Created logic to stop search, remove old token and get new token.

--- a/src/css/CardsContainer.scss
+++ b/src/css/CardsContainer.scss
@@ -1,9 +1,11 @@
 
 .cards-container {
+    position: relative;
     max-width: 700px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     box-sizing: border-box;
+
     .card {
         margin: 1rem;
         padding: 1rem;
